@@ -48,6 +48,7 @@ features added, but mainly this is bugfixes.</p>
     <li>cacti-integrate.php uses getopt to take more command-line params</li>
     <li>Updated jQuery to latest</li>
     <li>Number formatting will pick 1G over 1000M (and similar) (thanks cerbum)</li>
+    <li>The editor is disabled by default - see top of editor.php (and install guide)</li>
 </ul>
 <h3>New Features</h3>
 <ul>
